tests/baselines/reference/verbatimModuleSyntaxDefaultValue.errors.txt
tests/cases/compiler/index.ts(6,16): error TS1284: An 'export default' must reference a value when 'verbatimModuleSyntax' is enabled, but 'build' only refers to a type.


==== tests/cases/compiler/package.json (0 errors) ====
    { "name": "foo", "type": "module" }
    
==== tests/cases/compiler/index.ts (1 errors) ====
    class Task {}
    
    function task(): Task { return new Task(); }
    
    export const build = task();
    export default build;
                   ~~~~~
!!! error TS1284: An 'export default' must reference a value when 'verbatimModuleSyntax' is enabled, but 'build' only refers to a type.
    